--- a/packages/core/upload/package.json
+++ b/packages/core/upload/package.json
@@ -49,6 +49,7 @@
     "@strapi/utils": "4.20.0",
     "axios": "1.6.0",
     "byte-size": "7.0.1",
+    "classnames": "2.5.1",
     "cropperjs": "1.6.0",
     "date-fns": "2.30.0",
     "formik": "2.4.0",
